k8s/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-web
  namespace: statex-apps
spec:
  selector:
    app: monitoring-web
  ports:
    - port: 3396
      targetPort: 3396
  type: ClusterIP
